--- a/css_folder/header.css
+++ b/css_folder/header.css
@@ -8,8 +8,9 @@
     align-items: flex-end;
 }
 .sidepng{
-    height: 40px;
+    height: 50px;
     max-width: 100%;
+    margin-right: 50px;
 }
 
 nav{
