--- a/css_folder/item-catalouge.css
+++ b/css_folder/item-catalouge.css
@@ -1,3 +1,16 @@
+/* Contains all radio buttons and labels*/
+.filter{
+    display: flex;
+    justify-content: center;
+}
+
+/* Label of options */
+.filter label{
+    color:white;
+    width: 10%;
+    margin: 20px;
+}
+
 /* Container tha contains all the item instances */
 .items-container{
     display: grid;
