--- a/css_folder/item-catalouge.css
+++ b/css_folder/item-catalouge.css
@@ -26,16 +26,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center; /* Center text in the item block */
-    padding: 20px; /* Add padding for spacing */
-    background-color: #f8f9fa; /* Set background color for better visibility */
-    border: 1px solid #dee2e6; /* Add border for better separation */
-    border-radius: 8px; /* Optional: Add border radius for a rounded look */
+    text-align: center;
+    padding: 20px;
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
 
 }
 
 .item-block:hover {
     background-color: #e2e6ea;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 
@@ -60,9 +61,7 @@
     font-weight: bold;
 }
 
-
 /* Block holding the filter options*/
-
 .animation-container1{
     display: flex;
     justify-content: center;
