--- a/css_folder/item-catalouge.css
+++ b/css_folder/item-catalouge.css
@@ -7,7 +7,7 @@
 /* Label of options */
 .filter label {
     color: white;
-    width: 10%;
+    width: fit-content;
     margin: 10px;
 }
 
@@ -66,4 +66,21 @@
 .animation-container1{
     display: flex;
     justify-content: center;
+}
+
+@media only screen and (max-width: 420px){
+    .filter {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+
+    .items-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px; 
+        margin: 50px;
+    }
 }
