--- a/css_folder/account.css
+++ b/css_folder/account.css
@@ -20,3 +20,12 @@
     font-weight: bold;
     margin-right: 10px;
 }
+
+@media only screen and (max-width: 420px){
+    #form{
+        width: 300px !important;
+    }
+    .btn{
+        margin-bottom: 10px;
+    }
+}
