--- a/css_folder/home.css
+++ b/css_folder/home.css
@@ -1,4 +1,12 @@
-.d-block{
-    max-width: 100%;
-    width: max-content;
+@media only screen and (max-width: 420px){
+    .product {
+        width: 180px !important;
+    }
+    .product img{
+        max-width: 100%;
+    }
+
+    .row{
+        margin-left: 15px !important;
+    }
 }
