--- a/css_folder/wheel.css
+++ b/css_folder/wheel.css
@@ -15,18 +15,7 @@
     width: 500px;
     height: 500px;
 }
-/*
-.mainbox:after{
-    position: absolute;
-    content: '';
-    width: 32px;
-    height: 32px;
-    background: url('arrow-left.png') no-repeat;
-    background-size: 32px;
-    right: -30px;
-    top: 50%;
-    transform: translateY(-50%);
-}*/
+
 .box{
     width: 100%;
     height: 100%;
@@ -146,3 +135,48 @@ span{
     cursor: pointer;
 }
 
+#prize{
+    text-align: center;
+}
+
+
+@media only screen and (max-width: 420px){
+    #box{
+        height: 287px;
+        width: 287px;
+    }
+    span b{
+        font-size: small;
+    }   
+    #wheel1{
+        top: 65px;
+    }
+    #wheel2{
+        top: 65px;
+    }
+    #wheel3{
+        clip-path: polygon(50% 0%, 1% 100%, 100% 100%);
+        left: 67px;
+    }
+    #wheel4{
+        left: 64px;
+    }
+    #wheel5{
+        top: 69px;
+    }
+    #wheel6{
+        top: 65px;
+    }
+    #wheel7{
+        left: 68px;
+    }
+    #wheel8{
+        left: 68px;
+    }
+    .spin{
+        top: 28%;
+        width: 50px;
+        height: 50px;
+        font-size: initial;
+    }
+  }
