--- a/css_folder/home.css
+++ b/css_folder/home.css
@@ -1,3 +1,23 @@
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-around;
+    text-align: center;
+    padding: 20px;
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    height: 350px;
+}
+ 
+.product:hover {
+    /* background-color: #e2e6ea; */
+    transform: scale(1.05);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
+    transition: all 0.2s;
+}
+
 @media only screen and (max-width: 420px){
     .product {
         width: 180px !important;
