--- a/css_folder/footer.css
+++ b/css_folder/footer.css
@@ -1,5 +1,11 @@
+#footer{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
 @media only screen and (max-width: 420px){
     #follow{
-        padding-bottom: 15px !important;
+        padding-bottom: 30px !important;
     }
 }
