Checks for customer data in script.js for cart. Animation Postiion fix Things left: 1. Point Redemption, 2. CSS for Game Page

--- a/css_folder/item-catalouge.css
+++ b/css_folder/item-catalouge.css
@@ -76,11 +76,12 @@
     font-weight: bold;
 }
 
-/* Block holding the filter options*/
-.animation-container1{
-    display: flex;
+/* Animation Block */
+.animation-container{
+    display: flex !important;
     justify-content: center;
 }
+
 
 @media only screen and (max-width: 420px){
     .filter {
