--- a/css_folder/item-catalouge.css
+++ b/css_folder/item-catalouge.css
@@ -31,17 +31,18 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px; 
     margin: 50px;
+    /* width: fit-content; */
 }
 
 
 /* Block that contains all info of one item*/
 .item-block {
-    display: flex !important;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:space-around; 
     text-align: center;
-    padding: 20px;
+    padding: 10%;
     background-color: #f8f9fa;
     border: 1px solid #dee2e6;
     border-radius: 8px;
@@ -59,7 +60,7 @@
 /* Pic of item in block*/
 .item-pics {
     width: auto;
-    /* max-width: 150px; */
+    max-width: 20vw;
     height: auto;
     max-height: 80%;
 }
@@ -104,6 +105,9 @@
     } */
 
     .item-pics{
-        width: 50vw;
+        width: auto;
+        max-width: 52vw;
+        height: auto;
+        max-height: 80%;
     }
 }
